# ragescanner

./: .gitignore  AUDIT_HOSTNAME.md  BLUEPRINT_TEMPLATE.md  Cargo.toml  GEMINI.md  LICENSE  Makefile  README.md  architecture.md  context.md  spec.md
.agent/workflows/: feature.md  issue.md  plan-making.md
examples/: tui_poc.rs
reference/stitch/device_details_view/: code.html
reference/stitch/ip_scanner_dashboard/: code.html
scripts/: verify.sh
src/: bridge.rs  lib.rs  main.rs  net.rs  scanner.rs  types.rs  ui.rs
src/tui/: app.rs  event.rs  mod.rs  theme.rs  ui.rs
